# cpa-managment

./: .env.example  .gitignore  LICENSE  README.md  README_CN.md  config.example.yaml
.github/workflows/: release-macos.yml  release-windows.yml
client/Cli-Proxy-API-Management-Center/src/pages/: LoginPage.module.scss  LoginPage.tsx
client/Cli-Proxy-API-Management-Center/src/utils/: connection.ts
cmd/server/: main.go
desktop-official/: package-lock.json  package.json
desktop-official/src-tauri/: Cargo.toml  tauri.conf.json
desktop-official/src-tauri/capabilities/: default.json
desktop-official/src-tauri/src/: app_core.rs  lib.rs  main.rs  shared_types.rs
desktop-official/src-tauri/src/commands/: auth.rs  bootstrap.rs  dashboard.rs  keys.rs  logs.rs  mod.rs  providers.rs  service.rs  settings.rs  update.rs  usage.rs
internal/api/: server_core.go
internal/api/handlers/management/: api_tools.go  auth_files_core.go  auth_files_helpers.go  auth_files_oauth_gemini.go  auth_files_oauth_primary.go  auth_files_oauth_secondary.go  config_lists_amp_legacy.go  config_lists_api_keys_policies.go  config_lists_helpers.go  config_lists_oauth_mappings.go  config_lists_provider_keys.go
internal/auth/antigravity/: constants.go
internal/auth/gemini/: gemini_auth.go
internal/config/: config.go  sdk_config.go
internal/runtime/executor/: antigravity_executor.go  gemini_cli_executor.go
sdk/config/: config.go
